fixed the overflow width issue in bmi and done with assignment2

--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
     /* box-sizing: border-box; */
 }
 
+.hide_it{
+    display: none;
+}
+
 .container {
     /* border: 2px solid wheat; */
     width: 90%;
@@ -341,6 +345,7 @@ body {
 .bmi {
     /* text-align: start; */
     margin-left: 12rem;
+    width: calc(90% - 12rem);
 }
 
 .bmi h1 {
